6686791: Side effect in NumberFormat tests with -server -Xcomp

Optimization in CmpPNode::sub() removed the valid compare instruction because of false positive answer from detect_dominating_control().

Reviewed-by: jrose, sgoldman